--- a/README
+++ b/README
@@ -11,7 +11,7 @@ Easiest interactive python web app using htmx and semantic html
 ```
 # main.py
 
-from hyperstream import hs
+from hstream import hs
 
 hs.text_input('What's your name?', default_value = 'friend')
 hs.markdown(f"Welcome {visitor_name}")
